# InvoiceManageBack

./: .gitignore  package-lock.json  pyproject.toml  schema.sql  test_ocr_debug.py
config/: settings.py  test_settings.py  urls.py
core/: admin.py  docx_export.py  email_service.py  exceptions.py  models.py  pdf_merge.py  serializers.py  tests.py  trip_groups.py  urls.py  views.py
core/management/commands/: backfill_service_time.py  dedup_attachments.py  poll_emails.py  reparse_invoices.py
core/migrations/: 0001_initial.py  0002_add_invoice_parsed_fields.py  0003_invoice_invoice_type.py  0004_invoice_arrival_place_invoice_departure_place.py  0005_user_department_user_real_name.py  0006_invoice_invoice_number.py  0007_alter_invoice_invoice_number.py  0008_reimbursement_details.py  0009_tripgroup_tripgroupinvoice.py  0010_user_company.py  0011_user_city.py  0012_tripgroupinvoice_reimbursement_category.py  0013_tripgroup_title.py  0014_invoiceattachment.py  0015_user_dept_leader.py  0016_add_trip_separator.py  0017_email_integration.py  0018_change_service_dates_to_datetime.py  0019_invoiceattachment_trip_statement_fields.py  0020_invoiceattachment_travel_places.py  0021_ensure_travel_details_column.py
media/implement/.sample1_unzip/docProps/: app.xml  core.xml  custom.xml
media/implement/.sample1_unzip/word/: document.xml  settings.xml
media/implement/.sample2_unzip/docProps/: app.xml  core.xml  custom.xml
media/implement/.sample2_unzip/word/: document.xml  fontTable.xml  settings.xml  styles.xml
media/implement/.template_unzip/: [Content_Types].xml
tools/: README.md  __init__.py  check_reimbursement_export.py  config.py  ocr_parser.py  pdf_parser.py  structure_parser.py  test_upgrade.py
(+8 files in other folders)
